first 3 topics decoration

--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -73,34 +73,34 @@
   <div id="loader" uk-spinner="ratio: 3"></div>
 
   <!--Web header-->
-  <div class="title_header" id="bg1">
-    <h1>SOFTWARE ENGINEERING</h1>
+  <div id="bg1">
+      <b><h1 id="se_header">SOFTWARE ENGINEERING</h1></b>
   </div>
 
   <!--About Course-->
-  <div>
-    <h1>What is Software Engineering?</h1>
-    Software engineering is the branch that focusing on programming, developing software systems in the service of mankind.
-    This course covers the fundamentals of software engineering, including understanding system
-    requirements, effective methods of design, coding, and testing.
+  <div class="divide_div bg_color">
+    <h1 class="uk-heading-bullet content">What is Software Engineering?</h1>
+    <p class="content">Software engineering is the branch that focusing on programming, developing software systems in the service of mankind.
+    <br>This course covers the fundamentals of software engineering, including understanding system
+    requirements, effective methods of design, coding, and testing.</p>
   </div>
   <br>
 
   <!--How is Software Engineering differ from Multimedia and Network branch?-->
-  <div>
-    <h1>How Software Engineering differ from Multimedia and Game Development and Network and System Technology branch?</h1>
-    For Multimedia and Game Development, students in this branch will learn about front-end development and the use of creativity.
-    But for Software Engineering, we are focusing on back-end developing and deep programming.
-    Network and System Technology will focus on network.
+  <div class="divide_div">
+    <h1 class="uk-heading-bullet content">How different from the other two branches?</h1>
+    <p class="content">For Software Engineering, we are focusing on back-end developing and deep programming.<br>
+    But for Multimedia and Game Development, students in this branch will learn about front-end development and the use of creativity.<br>
+    Network and System Technology will focus on network.</p>
   </div>
   <br>
 
   <!--Who is eligible for this branch?-->
-  <div>
-    <h1>Who is eligible for this branch?</h1>
-    1. Have programming knowledge.<br>
+  <div class="divide_div" id="bg2">
+    <h1 class="white">Who is eligible for this branch?</h1>
+    <p class="white">1. Have programming knowledge.<br>
     2. Have good logic.<br>
-    3. Have good mathematics knowledge.
+    3. Have good mathematics knowledge.</p>
   </div>
   <br>
 
