--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -107,29 +107,38 @@
 
   <!--What you need to do/to have if you are interested in this branch-->
   <div>
-    <h1>What I need to do/to have if I am interested in this branch and do not have strong experience?</h1>
+    <h1>Less experience but interested in Software Engineering?</h1>
 
-    It would be easier to enter this branch if you have some experience in programming.
+    <p>It would be easier to enter this branch if you have some experience in programming.<br>
 
     We also have pre-programming course for PSIT subject which you will learn about Python language.
-    This would help you make decision and be more confident in yourselves.
+    This would help you make decision and be more confident in yourselves.<br>
 
     Here at IT faculty, we have 3 programming subjects which are Problem Solving in Information Technology,
-    Computer Programming, and Object Oriented Programming. The computer language that students will learn in these subjects
-    are Python, C, Java.
+    Computer Programming, and Object Oriented Programming.<br> The computer language that students will learn in these subjects
+    are Python, C, and Java.</p>
   </div>
   <br>
 
   <!--Career after graduate-->
   <div>
     <h1>Example of career after graduated</h1>
-    - Programmer<br>
+    <div class="uk-child-width-1-2 uk-child-width-1-4@s">
+    <div class="uk-text-left">
+          <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+              <img src="arif-riyanto-974674-unsplash.jpg" alt="Programmer">
+              <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
+                  <p class="uk-h1 uk-margin-remove" align="center">Programmer</p>
+              </div>
+          </div>
+    </div>
     - Web Developer<br>
     - Software Tester<br>
     - System Analyst<br>
     - Software Architect<br>
     - Project manager Assistant
   </div>
+</div>
   <br>
 
   <!--Specific subjects in SE branch-->
