--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -107,38 +107,29 @@
 
   <!--What you need to do/to have if you are interested in this branch-->
   <div>
-    <h1>Less experience but interested in Software Engineering?</h1>
+    <h1>What I need to do/to have if I am interested in this branch and do not have strong experience?</h1>
 
-    <p>It would be easier to enter this branch if you have some experience in programming.<br>
+    It would be easier to enter this branch if you have some experience in programming.
 
     We also have pre-programming course for PSIT subject which you will learn about Python language.
-    This would help you make decision and be more confident in yourselves.<br>
+    This would help you make decision and be more confident in yourselves.
 
     Here at IT faculty, we have 3 programming subjects which are Problem Solving in Information Technology,
-    Computer Programming, and Object Oriented Programming.<br> The computer language that students will learn in these subjects
-    are Python, C, and Java.</p>
+    Computer Programming, and Object Oriented Programming. The computer language that students will learn in these subjects
+    are Python, C, Java.
   </div>
   <br>
 
   <!--Career after graduate-->
   <div>
     <h1>Example of career after graduated</h1>
-    <div class="uk-child-width-1-2 uk-child-width-1-4@s">
-    <div class="uk-text-left">
-          <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-              <img src="arif-riyanto-974674-unsplash.jpg" alt="Programmer">
-              <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
-                  <p class="uk-h1 uk-margin-remove" align="center">Programmer</p>
-              </div>
-          </div>
-    </div>
+    - Programmer<br>
     - Web Developer<br>
     - Software Tester<br>
     - System Analyst<br>
     - Software Architect<br>
     - Project manager Assistant
   </div>
-</div>
   <br>
 
   <!--Specific subjects in SE branch-->
@@ -354,6 +345,57 @@
       </td>
     </tr>
   </table>
+  
+  <!-- MAP -->
+  <div align="center">
+  	<iframe align="center" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d680.7709369511526!2d100.78156372473921!3d13.730989046584748!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d663694a3b7b9%3A0x96cdb7beb7b004e2!2sFaculty+of+Information+Technology!5e0!3m2!1sth!2sth!4v1545043492881" width="1000" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+  
+  <!-- FOOTER-->
+  <div class="uk-section uk-section-muted">
+    <div class="uk-container">
+
+    
+		<div class="uk-child-width-1-3@s" uk-grid>
+   			<div class="uk-panel" align="center">
+   				<h3>Contact Us</h3>
+			</div>
+   		 	<div class="uk-panel">
+					<p>
+        			Faculty of Information Technology, King Mougkut's Institute ofTechnology Ladkrabang
+					</p>
+        			<p>
+        			<span uk-icon="icon: location"></span>
+					1 Chalongkrung 1, Ladkrabang, Ladkrabang, Bangkok 10520
+					</p>
+        			<p>
+        			<span uk-icon="icon: receiver"></span>
+        			+66(0)2723 4900<br>
+        			</p>
+    		</div>
+			<div class="uk-panel" >
+        		<ul class="uk-list uk-link-text">
+    				<li>
+    					<span uk-icon="facebook"></span>
+    					<a href="https://www.facebook.com/ITLadkrabang/?ref=ts&fref=ts">Facebook</a>
+    				</li>
+   					<li>
+   						<span uk-icon="twitter"></span>
+   						<a href="https://twitter.com/itkmitl">Twitter</a>
+   					</li>
+   					<li>
+   						<span uk-icon="youtube"></span>
+						<a href="https://www.youtube.com/user/itkmitl1/feed">Youtube</a>
+   					</li>
+   					<li>
+   						<span uk-icon="flickr"></span>
+   						<a href="https://www.flickr.com/photos/itkmitl">Flickr</a>
+   					</li>
+				</ul>
+  		    </div>
+		</div>
+  	</div>
+  </div>
 
   <!--in file script-->
   <script>
@@ -370,6 +412,7 @@
   </script>
 </ul>
 
+<script src="js/uikit-icons.min.js"></script>
 
 </body>
 
