--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -397,6 +397,31 @@
   	</div>
   </div>
 
+  <!--  CHAT MESSAGE -->
+  <div class="container">
+    <img src="" alt="Avatar">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <span class="time-right">11:00</span>
+  </div>
+
+  <div class="container darker">
+    <img src="" alt="Avatar" class="right">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <span class="time-left">11:01</span>
+  </div>
+
+  <div class="container">
+    <img src="" alt="Avatar">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <span class="time-right">11:02</span>
+  </div>
+
+  <div class="container darker">
+    <img src="" alt="Avatar" class="right">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <span class="time-left">11:05</span>
+  </div>
+
   <!--in file script-->
   <script>
     var myVar;
