--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -345,7 +345,34 @@
       </td>
     </tr>
   </table>
-  
+
+  <!--  CHAT MESSAGE -->
+  <h1>Q&A</h1>
+  <div class="container">
+    <img src="pic/test.jpg" alt="Avatar">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <span class="time-right">11:00</span>
+  </div>
+
+  <div class="container darker">
+    <img src="pic/test.jpg" alt="Avatar" class="right">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <span class="time-left">11:01</span>
+  </div>
+
+  <div class="container">
+    <img src="pic/test.jpg" alt="Avatar">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <span class="time-right">11:02</span>
+  </div>
+
+  <div class="container darker">
+    <img src="pic/test.jpg" alt="Avatar" class="right">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <span class="time-left">11:05</span>
+  </div>
+  <br>
+  <br>
   <!-- MAP -->
   <div align="center">
   	<iframe align="center" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d680.7709369511526!2d100.78156372473921!3d13.730989046584748!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d663694a3b7b9%3A0x96cdb7beb7b004e2!2sFaculty+of+Information+Technology!5e0!3m2!1sth!2sth!4v1545043492881" width="1000" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -362,7 +389,7 @@
 			</div>
    		 	<div class="uk-panel">
 					<p>
-        			Faculty of Information Technology, King Mougkut's Institute ofTechnology Ladkrabang
+        			Faculty of Information Technology, King Mougkut's Institute of Technology Ladkrabang
 					</p>
         			<p>
         			<span uk-icon="icon: location"></span>
@@ -395,31 +422,6 @@
   		    </div>
 		</div>
   	</div>
-  </div>
-
-  <!--  CHAT MESSAGE -->
-  <div class="container">
-    <img src="" alt="Avatar">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <span class="time-right">11:00</span>
-  </div>
-
-  <div class="container darker">
-    <img src="" alt="Avatar" class="right">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <span class="time-left">11:01</span>
-  </div>
-
-  <div class="container">
-    <img src="" alt="Avatar">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <span class="time-right">11:02</span>
-  </div>
-
-  <div class="container darker">
-    <img src="" alt="Avatar" class="right">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <span class="time-left">11:05</span>
   </div>
 
   <!--in file script-->
