--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -70,7 +70,7 @@
                 </ul>
               </div>
             </li>
-            <li><a href="#">Item</a></li>
+            <li><a href="#">SUBJECT TABLE</a></li>
           </ul>
 
         </div>
@@ -373,54 +373,52 @@
   </div>
   <br>
   <br>
-  <!-- MAP -->
-  <div align="center">
-  	<iframe align="center" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d680.7709369511526!2d100.78156372473921!3d13.730989046584748!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d663694a3b7b9%3A0x96cdb7beb7b004e2!2sFaculty+of+Information+Technology!5e0!3m2!1sth!2sth!4v1545043492881" width="1000" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-  </div>
-  
-  <!-- FOOTER-->
-  <div class="uk-section uk-section-muted">
-    <div class="uk-container">
 
-    
-		<div class="uk-child-width-1-3@s" uk-grid>
-   			<div class="uk-panel" align="center">
-   				<h3>Contact Us</h3>
-			</div>
-   		 	<div class="uk-panel">
-					<p>
-        			Faculty of Information Technology, King Mougkut's Institute of Technology Ladkrabang
-					</p>
-        			<p>
-        			<span uk-icon="icon: location"></span>
-					1 Chalongkrung 1, Ladkrabang, Ladkrabang, Bangkok 10520
-					</p>
-        			<p>
-        			<span uk-icon="icon: receiver"></span>
-        			+66(0)2723 4900<br>
-        			</p>
-    		</div>
-			<div class="uk-panel" >
-        		<ul class="uk-list uk-link-text">
-    				<li>
-    					<span uk-icon="facebook"></span>
-    					<a href="https://www.facebook.com/ITLadkrabang/?ref=ts&fref=ts">Facebook</a>
-    				</li>
-   					<li>
-   						<span uk-icon="twitter"></span>
-   						<a href="https://twitter.com/itkmitl">Twitter</a>
-   					</li>
-   					<li>
-   						<span uk-icon="youtube"></span>
-						<a href="https://www.youtube.com/user/itkmitl1/feed">Youtube</a>
-   					</li>
-   					<li>
-   						<span uk-icon="flickr"></span>
-   						<a href="https://www.flickr.com/photos/itkmitl">Flickr</a>
-   					</li>
-				</ul>
-  		    </div>
-		</div>
+  <!-- FOOTER-->
+  <div class="uk-section uk-section-secondary">
+    <div class="uk-container">
+      <div class="uk-child-width-expand" uk-grid>
+        <div class="uk-panel" align="center">
+          <h3>Contact Us</h3>
+        </div>
+        <div class="uk-panel">
+
+          <p>
+            Faculty of Information Technology, King Mougkut's Institute of Technology Ladkrabang
+          </p>
+          <p>
+            <span uk-icon="icon: location"></span>
+            1 Chalongkrung 1, Ladkrabang, Ladkrabang, Bangkok 10520
+          </p>
+          <p>
+            <span uk-icon="icon: receiver"></span>
+            +66(0)2723 4900<br>
+          </p>
+          <p>
+            <span uk-icon="icon: print"></span>
+            +66(0)2723 4910<br>
+          </p>
+          </div>
+          <br>
+        <div align="center">
+          <iframe align="left" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d680.7709369511526!2d100.
+                78156372473921!3d13.730989046584748!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d663694a3b7b9%3A0x96cdb7beb7b004e2!
+                2sFaculty+of+Information+Technology!5e0!3m2!1sth!2sth!4v1545043492881"
+                  width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <div class="uk-panel" >
+          <ul class="uk-list uk-link-text">
+            <li>
+              <span uk-icon="facebook"></span>
+              <a href="https://www.facebook.com/ITLadkrabang/?ref=ts&fref=ts" target="_blank">Facebook</a>
+            </li>
+            <li>
+              <span uk-icon="world"></span>
+              <a href="http://www.it.kmitl.ac.th/" target="_blank">Main website</a>
+            </li>
+          </ul>
+        </div>
+      </div>
   	</div>
   </div>
 
