--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -108,8 +108,8 @@
   <br>
 
   <!--What you need to do/to have if you are interested in this branch-->
-  <div>
-    <h1>What I need to do/to have if I am interested in this branch and do not have strong experience?</h1>
+  <div class="divide_div">
+    <h1>Less experience but interested in Software Engineering branch?</h1>
 
       It would be easier to enter this branch if you have some experience in programming.<br>
 
@@ -386,75 +386,19 @@
       </tr>
       <tr align="center">
         <td>
+               </td>
+        <td>
+          6016325<br>
+          Service-Oriented Programming
+        </td>
+        <td>
+          6016328<br>
+          Software Development Tools and Environments
+        </td>
+      </tr>
+    </table>
+  </div>
 
-  <div style="text-align: center;"><button class="uk-button uk-button-default" type="button" uk-toggle="target: .toggle">SWITCH TABLE BETWEEN COOPERATIVE/WITHOUT COOPERATIVE</button></div>
-  <!--///////////////////////// TABLE  PROJECT /////////////////////////////////-->
-  <p class="toggle" align="center" id="head_table_project_w_coop"><b>Without Cooperative Work</b></p>
-  <p class="toggle" align="center" id="head_table_project_n_coop" hidden><b>With Cooperative Work</b></p>
-  <table id="branch_subjects_table_project" align="center">
-    <tr>
-      <th>YEAR 2/2</th>
-      <th>YEAR 3/1</th>
-      <th>YEAR 3/2</th>
-      <th>YEAR 4/1</th>
-      <th>YEAR 4/2</th>
-    </tr>
-    <tr align="center">
-      <td>
-        6016321<br>
-        Software Engineering
-      </td>
-      <td>
-        6016323<br>
-        Mobile Device Programming
-      </td>
-      <td>
-        6016326<br>
-        Software Verification and Validation
-      </td>
-      <td  class="toggle" >
-        6016329<br>
-        Project in Software Engineering 1
-      </td>
-      <td  class="toggle" >
-        6016330<br>
-        Project in Software Engineering 2
-      </td>
-      <td class="toggle" hidden>
-        Cooperative Work
-      </td>
-      <td class="toggle" hidden>
-        Cooperative Work
-      </td >
-    </tr>
-    <tr align="center">
-      <td>
-        60163212<br>
-        Web Programming
-      </td>
-      <td>
-        6016324<br>
-        Requirement Engineering
-      </td>
-      <td>
-        6016327<br>
-        Cloud-based Enterprise Application Development
-      </td>
-    </tr>
-    <tr align="center">
-      <td>
-
-      </td>
-      <td>
-        6016325<br>
-        Service-Oriented Programming
-      </td>
-      <td>
-        6016328<br>
-        Software Development Tools and Environments
-      </td>
-    </tr>
-  </table>
 
   <!--  CHAT MESSAGE -->
   <h1>Q&A</h1>
@@ -482,27 +426,6 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <span class="time-left">11:05</span>
   </div>
-
-
-        </td>
-        <td>
-          6016325<br>
-          Service-Oriented Programming
-        </td>
-        <td>
-          6016328<br>
-          Software Development Tools and Environments
-        </td>
-      </tr>
-    </table>
-  </div>
-
-    <img src="pic/test.jpg" alt="Avatar" class="right">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <span class="time-left">11:05</span>
-  </div>
-  <br>
-  <br>
 
   <!-- FOOTER-->
   <div class="uk-section uk-section-secondary">
