--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -27,53 +27,53 @@
 
   <!-- NAVBAR -->
   <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
-      <nav class="uk-navbar-container" id="nav_bar" uk-navbar style="position: relative; z-index: 980;">
-        <div class="uk-navbar-right">
-          <ul class="uk-navbar-nav">
-            <li>
-              <a href="#">ABOUT</a>
-              <div class="uk-navbar-dropdown">
-                <ul class="uk-nav uk-navbar-dropdown-nav">
-                  <li><a href="#">WHAT IS SOFTWARE ENGINEERING</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">DIFFERENT</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">ELIGIBLE</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">TO DE / TO HAVE</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">EXAMPLE CAREER</a></li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <a href="#">BRANCH SUBJECT</a>
-              <div class="uk-navbar-dropdown">
-                <ul class="uk-nav uk-navbar-dropdown-nav">
-                  <li><a href="#">SOFTWARE ENGINEERING</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">WEB PROGRAMMING</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">MOBILE DEVICE PROGRAMMING</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">REQUIREMENT ENGINEERING</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">SERVICE-ORIENTED PROGRAMMING</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">SOFTWARE VERIFICATION AND VALIDATION</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">PROJECT IN SOFTWARE ENGINEERING 1</a></li>
-                  <li class="uk-nav-divider"></li>
-                  <li><a href="#">PROJECT IN SOFTWARE ENGINEERING 2</a></li>
-                </ul>
-              </div>
-            </li>
-            <li><a href="#">SUBJECT TABLE</a></li>
-          </ul>
+    <nav class="uk-navbar-container" id="nav_bar" uk-navbar style="position: relative; z-index: 980;">
+      <div class="uk-navbar-right">
+        <ul class="uk-navbar-nav">
+          <li>
+            <a href="#">ABOUT</a>
+            <div class="uk-navbar-dropdown">
+              <ul class="uk-nav uk-navbar-dropdown-nav">
+                <li><a href="#">WHAT IS SOFTWARE ENGINEERING</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">DIFFERENT</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">ELIGIBLE</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">TO DE / TO HAVE</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">EXAMPLE CAREER</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">BRANCH SUBJECT</a>
+            <div class="uk-navbar-dropdown">
+              <ul class="uk-nav uk-navbar-dropdown-nav">
+                <li><a href="#">SOFTWARE ENGINEERING</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">WEB PROGRAMMING</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">MOBILE DEVICE PROGRAMMING</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">REQUIREMENT ENGINEERING</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">SERVICE-ORIENTED PROGRAMMING</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">SOFTWARE VERIFICATION AND VALIDATION</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">PROJECT IN SOFTWARE ENGINEERING 1</a></li>
+                <li class="uk-nav-divider"></li>
+                <li><a href="#">PROJECT IN SOFTWARE ENGINEERING 2</a></li>
+              </ul>
+            </div>
+          </li>
+          <li><a href="#">SUBJECT TABLE</a></li>
+        </ul>
 
       </div>
     </nav>
@@ -111,21 +111,23 @@
   <div class="divide_div">
     <h1>Less experience but interested in Software Engineering branch?</h1>
 
-      It would be easier to enter this branch if you have some experience in programming.<br>
+    It would be easier to enter this branch if you have some experience in programming.<br>
 
-      Here at IT faculty, we have 3 programming subjects which are Problem Solving in Information Technology,
-      Computer Programming, and Object Oriented Programming.<br> The computer language that students will learn in these subjects
-      are Python, C, and Java.<br>
+    Here at IT faculty, we have 3 programming subjects which are Problem Solving in Information Technology,
+    Computer Programming, and Object Oriented Programming.<br> The computer language that students will learn in these subjects
+    are Python, C, and Java.<br>
 
-      We also have pre-programming course for Problem Solving in Information Technology subject which you will learn about Python language.
-      This would help you make decision and be more confident in yourselves.
+    We also have pre-programming course for Problem Solving in Information Technology subject which you will learn about Python language.
+    This would help you make decision and be more confident in yourselves.
     </p>
   </div>
   <br>
 
   <!--Career after graduate-->
   <div>
-    <h1 align="center">Example of career after graduated</h1>
+    <div style="padding: 50px; background-color: black;">
+    <h1 align="center" style="color: white;">Example of career after graduated</h1>
+    </div>
     <div class="uk-child-width-1-2 uk-child-width-1-3@s uk-grid-collapse uk-grid-small" uk-grid>
       <div class="uk-text-left">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
@@ -138,7 +140,7 @@
 
       <div class="uk-text-left">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-          <img src="arif-riyanto-974674-unsplash.jpg" alt="Web Developer">
+          <img src="pic/web_dev.jpg" alt="Web Developer">
           <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
             <p class="uk-h1 uk-margin-remove" align="center">Web Developer</p>
           </div>
@@ -185,6 +187,7 @@
   <br>
 
   <!--Specific subjects in SE branch-->
+  <div class="divide_div" style="padding-bottom: 50px;">
   <div>
     <h1>Branch Subjects</h1>
   </div>
@@ -326,10 +329,10 @@
       </div>
     </li>
   </ul>
-
+</div>
 
   <!-- TABLE -->
-  <div style="border: solid 2px; padding: 50px; margin: 100px;">
+  <div style="border: solid 2px; padding: 50px; margin: 100px; margin-top: 0px;">
     <div style="text-align: center;"><button class="uk-button uk-button-default" type="button" uk-toggle="target: .toggle">SWITCH TABLE BETWEEN COOPERATIVE/WITHOUT COOPERATIVE</button></div>
     <!--///////////////////////// TABLE  PROJECT /////////////////////////////////-->
     <p class="toggle" align="center" id="head_table_project_w_coop"><b>Without Cooperative Work</b></p>
@@ -386,7 +389,7 @@
       </tr>
       <tr align="center">
         <td>
-               </td>
+        </td>
         <td>
           6016325<br>
           Service-Oriented Programming
@@ -399,32 +402,33 @@
     </table>
   </div>
 
-
   <!--  CHAT MESSAGE -->
-  <h1>Q&A</h1>
-  <div class="container">
-    <img src="pic/test.jpg" alt="Avatar">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <span class="time-right">11:00</span>
-  </div>
+  <div class="divide_div">
+    <h1>Q&A</h1>
+    <div class="container">
+      <img src="pic/test.jpg" alt="Avatar">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <span class="time-right">11:00</span>
+    </div>
 
-  <div class="container darker">
-    <img src="pic/test.jpg" alt="Avatar" class="right">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <span class="time-left">11:01</span>
-  </div>
+    <div class="container darker">
+      <img src="pic/test.jpg" alt="Avatar" class="right">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <span class="time-left">11:01</span>
+    </div>
 
-  <div class="container">
-    <img src="pic/test.jpg" alt="Avatar">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <span class="time-right">11:02</span>
-  </div>
+    <div class="container">
+      <img src="pic/test.jpg" alt="Avatar">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <span class="time-right">11:02</span>
+    </div>
 
-  <div class="container darker">
+    <div class="container darker">
 
-    <img src="" alt="Avatar" class="right">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <span class="time-left">11:05</span>
+      <img src="" alt="Avatar" class="right">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <span class="time-left">11:05</span>
+    </div>
   </div>
 
   <!-- FOOTER-->
@@ -451,15 +455,15 @@
             <span uk-icon="icon: print"></span>
             +66(0)2723 4910<br>
           </p>
-          </div>
-          <br>
+        </div>
+        <br>
         <div align="center">
           <iframe align="left" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d680.7709369511526!2d100.
                 78156372473921!3d13.730989046584748!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d663694a3b7b9%3A0x96cdb7beb7b004e2!
                 2sFaculty+of+Information+Technology!5e0!3m2!1sth!2sth!4v1545043492881"
-                  width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+            width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
-        <div class="uk-panel" >
+        <div class="uk-panel">
           <ul class="uk-list uk-link-text">
             <li>
               <span uk-icon="facebook"></span>
@@ -472,7 +476,7 @@
           </ul>
         </div>
       </div>
-  	</div>
+    </div>
   </div>
 
 
@@ -491,7 +495,7 @@
   </script>
   </ul>
 
-<script src="js/uikit-icons.min.js"></script>
+  <script src="js/uikit-icons.min.js"></script>
 
 </body>
 
